RESOLVED FIXED301558
[iOS] Double tap does not result in dblclick event dispatch even when the Window object has a listener
https://bugs.webkit.org/show_bug.cgi?id=301558
Summary [iOS] Double tap does not result in dblclick event dispatch even when the Win...
Abrar Rahman Protyasha
Reported 2025-10-27 22:45:39 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2025-10-27 23:07:53 PDT
EWS
Comment 2 2025-10-28 19:29:02 PDT
Committed 302274@main (dc2b216b9f0f): <https://commits.webkit.org/302274@main> Reviewed commits have been landed. Closing PR #53076 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.