[iOS] Double tap does not result in dblclick event dispatch even when the Window object has a listener https://bugs.webkit.org/show_bug.cgi?id=301558 rdar://162546881

Reviewed by Ryosuke Niwa.

Currently, we walk up the DOM tree from our hit test point to determine
whether any node requires dblclick dispatch.

However, in the case that _only_ the Window object has a dblclick event
listener, we think there is no node responding to double click events,
because the Window object does not show up in the node traversal logic
in LocalFrame::nodeRespondingToDoubleClickEvent().

In this patch, we address this shortcoming by introducing some special
casing for Window. After checking for an appropriate target node (for
dblclick dispatch), we now apply the same logic for Window.

Test: fast/events/touch/ios/double-tap-for-double-click-on-window.html

* LayoutTests/fast/events/touch/ios/double-tap-for-double-click-on-window-expected.txt: Added.
* LayoutTests/fast/events/touch/ios/double-tap-for-double-click-on-window.html: Added.
* Source/WebCore/page/DOMWindow.h:
* Source/WebCore/page/ios/FrameIOS.mm:
(WebCore::LocalFrame::qualifyingNodeAtViewportLocation):
Drive-by rewrite: nullptr is clearer than 0 at the callsite about what
kind of data we are passing in.

* Source/WebKit/Shared/ios/InteractionInformationAtPosition.h:
* Source/WebKit/Shared/ios/InteractionInformationAtPosition.serialization.in:
Now that the InteractionInformationAtPosition structure captures more
than just "can the hit tested node respond to dblclick events", we
rename the flag to `hitNodeOrWindowHasDoubleClickListener`. This
reflects the expanded scope of the bit.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView gestureRecognizerShouldBegin:]):
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::windowWithDoubleClickEventListener):
(WebKit::WebPage::handleDoubleTapForDoubleClickAtPoint):
(WebKit::WebPage::positionInformation):

Canonical link: https://commits.webkit.org/302274@main